fixed menu overlap into content area in standalone.css
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21208 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/standalone.css
+++ b/css/standalone.css
@@ -10,6 +10,7 @@
 
 #crm-container table#content {
   border: 1px solid #aaa;
+  margin-top: 25px;
 }
 
 #crm-container ul.indented {
